--- a/cosmic-gardener/frontend/style.css
+++ b/cosmic-gardener/frontend/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap');
 @import url('./css/menu.css');
+@import url('./css/options-screen.css');
 
 /* Idle Game Notification Styles */
 .notification {
